--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,5 @@
 body{
-    /* background-image: linear-gradient(to right, #00d2ff, #928dab); */
-    background-image: url(../src//images/drizzle.jpg);
+    background-image: linear-gradient(to right, #00d2ff, #928dab);
     background-position: top;
     background-size: cover;
 }
